# dbt_ddc_generator

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
dbt_ddc_generator/: __init__.py
dbt_ddc_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
dbt_ddc_generator/cli/: cli.py
dbt_ddc_generator/core/generator/: __init__.py  generator.py
dbt_ddc_generator/core/templates/: completeness.yml  duplicates.yml  freshness.yml
dbt_ddc_generator/core/utils/: cron_converter.py  dbt_model.py  dbt_profiles.py  dbt_scheduling.py  ddc_translator.py  git.py  logging_config.py
tests/: conftest.py
tests/cli/: test_cli.py
tests/core/generator/: test_generator.py
tests/core/utils/: test_dbt_model.py  test_dbt_profiles.py  test_dbt_scheduling.py  test_ddc_translator.py  test_git.py
