[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
fix = true
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = ["F", "E", "I"]
ignore = ["E501"]

[tool.mypy]
exclude = [
    "tests",
    "venv",
    "build",
    "dist"
]
