[tool.poetry]
name = "dbt-ddc-generator"
version = "0.1.0"
description = "Generate DDC files for dbt models"
authors = ["Phil Baines <phillip.baines@instacart.com>"]
readme = "README.md"

[tool.poetry.scripts]
dbtddc = "dbt_ddc_generator.cli.cli:cli"

[tool.poetry.dependencies]
python = "^3.9.11"
click = "^8.0.0"
jinja2 = "^3.0.0"
pyyaml = "^6.0.0"
python-dotenv = "^1.0.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
ruff = "^0.1.0"
mypy = "^1.0.0"
pytest = "^7.0.0"
types-requests = "^2.31.0"

[tool.ruff]
fix = true
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = ["F", "E", "I"]
ignore = ["E501"]

[tool.mypy]
exclude = [
    "tests",
    "venv",
    "build",
    "dist"
]
